# recursive-xlstm

./: LICENSE  pyproject.toml
src/recursive_xlstm/: __init__.py
